# infoch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  config.lua  flake.nix
src/: base64.cpp  base64.hpp  cli.cpp  cli.hpp  cli_override.cpp  cli_override.hpp  cli_utils.cpp  cli_utils.hpp  main.cpp  output.hpp
src/config/: conf.cpp  conf.hpp  lua.hpp
src/image/: fn.cpp  fn.hpp  image.cpp  image.hpp  magick7.cpp  magick7.hpp  types.hpp  utils.cpp  utils.hpp
src/image/protocol/: iterm.cpp  iterm.hpp  kitty.cpp  kitty.hpp
src/os/: file_descriptor.hpp
src/settings/: image.hpp  settings.cpp  settings.hpp
src/terminal/: cbreak_mode.cpp  cbreak_mode.hpp  detection.cpp  detection.hpp  io.cpp  io.hpp  passthrough.hpp  term_query.cpp  term_query.hpp  term_size.cpp  term_size.hpp  term_size_query.cpp  term_size_query.hpp  tty.cpp  tty.hpp  types.hpp
src/text/: text.cpp  text.hpp
